# shitclaw

./: .code-workspace  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  ref.toml  sha.sh
.bot/: ref.lock.json
.gemini/: settings.json
bot-py/: .gitignore  main.py  pyproject.toml
bot-ts/: README.md  package.json
docs/plans/: ai-workflow-codebuddy-v2.md  ai-workflow-codebuddy.md  ai-workflow-codex-v2.md  ai-workflow-codex.md  ai-workflow-gemini-v2.md  ai-workflow-gemini.md  ai-workflow-qwen-v2.md  ai-workflow-qwen.md  ai-workflow-v1.md  knowledge-manager-skill.md  stdio-wrapper.md
src/nbcode/: __init__.py  main.py
todo/: acp-protocol-spec.md  acp.md  knowledge-manager-skill.md
